--- a/label.css
+++ b/label.css
@@ -1,7 +1,27 @@
-* {
+  * {
     box-sizing: border-box;
   }
   
+  a.nav-link:link {
+    color: black;
+    text-decoration: none;
+  }
+
+  a.nav-link:visited {
+    color: black;
+    text-decoration: none;
+  }
+
+  a.nav-link:hover {
+    color: black;
+    text-decoration: none;
+  }
+
+  a.nav-link:hover {
+    color: rgb(195, 197, 250);
+    text-decoration: none;
+  }
+
   html {
     font-size: 16px;
     padding-top: 50px;
