--- a/label.css
+++ b/label.css
@@ -22,6 +22,14 @@
     text-decoration: none;
   }
 
+  .product-img {
+    height: 67%;
+    width: 67%;
+    margin: 20px auto;
+    padding: 0 7px;
+    display: flex;
+  }
+
   html {
     font-size: 16px;
     padding-top: 50px;
